# cudaqx

./: .cudaq_realtime_version  .cudaq_version  .git-blame-ignore-revs  .gitignore  AGENTS.md  BRANCH_SUMMARY.txt  Building.md  CMakeLists.txt  H 0-pyscf.chk  test_surface_code_trt.py
.claude/: settings.local.json
docs/: CMakeLists.txt  Doxyfile.in  realtime_qldpc_relay_bp_guide.md
docs/sphinx/: conf.py  conf.py.in
docs/sphinx/api/qec/: cpp_api.rst  cpp_realtime_decoding_api.rst  nv_qldpc_decoder_api.rst  python_api.rst  python_realtime_decoding_api.rst  realtime_decoding_api.rst  sliding_window_api.rst  tensor_network_decoder_api.rst
docs/sphinx/api/solvers/: cpp_api.rst
docs/sphinx/components/qec/: introduction.rst
docs/sphinx/components/solvers/: introduction.rst
docs/sphinx/examples/qec/: README.md
docs/sphinx/examples/qec/cpp/: circuit_level_noise.cpp  dem_sampling.cpp  real_time_complete.cpp  stim_dem_decoder.cpp
docs/sphinx/examples/qec/python/: circuit_level_noise.py  code_capacity_noise.py  custom_repetition_code_fine_grain_noise.py  dem_sampling.py  generate_parity_check_matrix.py  my_steane.py  my_steane_test.py  nv-qldpc-decoder.py  pseudo_threshold.py  real_time_complete.py  repetition_code_fine_grain_noise.py  repetition_code_pcm.py  stim_dem_decoder.py  tensor_network_decoder.py  tn_noise_learning.py  train_mlp_decoder.py
docs/sphinx/examples/qec/realtime_decoding_demo/: .gitignore  CMakeLists.txt  README.md  gen_dsparse_from_memory_circuit.py  run_realtime_decoding.sh  surface_code_ising_realtime_decoding.cpp  surface_code_realtime_decoding.cpp
docs/sphinx/examples/solvers/cpp/: adapt_h2.cpp
docs/sphinx/examples/solvers/python/: adapt_h2.py  generate_molecular_hamiltonians.py  gqe_h2.py  gqe_n2.py
docs/sphinx/examples_rst/qec/: circuit_level_noise.rst  decoders.rst  decoding_server.rst  dem_sampling.rst  examples.rst  realtime_decoding.rst  realtime_decoding_demo.rst  realtime_predecoder_fpga.rst  realtime_predecoder_pymatching.rst  realtime_relay_bp.rst  tensor_network_decoder.rst
docs/sphinx/examples_rst/solvers/: molecular_hamiltonians.rst
docs/sphinx/quickstart/: installation.rst
libs/qec/lib/: CMakeLists.txt  code.cpp  decoder.cpp  decoder_pool.cpp  decoder_stim_dem.cpp  detector_error_model.cpp  experiments.cpp  hardware_affinity.h  hardware_guards.h  inlined_feedback_layout.h  logger.cpp  logger_forwarder.cpp  logger_forwarder.h  pcm_utils.cpp  plugin_loader.cpp  sparse_binary_matrix.cpp  stabilizer_utils.cpp
libs/qec/lib/codes/: repetition.cpp  repetition_device.cpp  surface_code.cpp  surface_code_device.cpp
libs/qec/lib/decoders/: lut.cpp  single_error_lut.cpp  sliding_window.cpp  sliding_window.h
libs/qec/lib/decoders/plugins/chromobius/: chromobius.cpp
libs/qec/lib/decoders/plugins/example/: CMakeLists.txt  decoder_plugins_demo.cpp  decoder_plugins_loader.h  plugin_exports.cpp  plugin_exports.h  single_error_lut_example.cpp
libs/qec/lib/decoders/plugins/pymatching/: pymatching.cpp
libs/qec/lib/decoders/plugins/trt_decoder/: CMakeLists.txt  trt_decoder.cpp
libs/qec/lib/dem_sampling/: dem_sampling_gpu.cpp  dem_sampling_utils.cu  dem_sampling_utils.h
libs/qec/lib/device/: CMakeLists.txt  inlined_feedback.h  memory_circuit.cpp  memory_circuit.h
libs/qec/lib/realtime/: CMakeLists.txt  config.cpp  mock_decode_handler.cu  qec_realtime_session.cpp  qec_realtime_session.h  realtime_decoding.cpp  realtime_decoding.h  rpc_producer.cpp  rpc_producer.h
libs/qec/lib/realtime/decoder_server/: CMakeLists.txt  DecoderServer.cpp  DecoderServer.h  DecoderSession.cpp  DecoderSession.h  ITransceiver.h  LoopbackTransceiver.h  RoundAccumulator.cpp  RpcDispatcher.cpp  RpcDispatcher.h  RpcWireFormat.h  SessionRegistry.cpp  SessionRegistry.h
libs/qec/lib/realtime/decoding-server-cqr/: CMakeLists.txt  CpuRoceTransceiver.cpp  CpuRoceTransceiver.h  CqrTransceiver.h  DecoderServer.cpp  DecoderServer.h  DecoderSession.cpp  DecoderSession.h  DecodingServer.cpp  DecodingServer.h  DecodingSession.cpp  DecodingSession.h  GpuRoceFactory.cpp  GpuRoceLinkCheck.cpp  GpuRoceTransceiver.cpp  GpuRoceTransceiver.h  ITransceiver.h  LoopbackTransceiver.h  RoundAccumulator.cpp  RoundAccumulator.h  RpcDispatcher.cpp  RpcWireFormat.h  SessionRegistry.cpp  SessionRegistry.h  decoding_server_cqr.cpp
libs/qec/lib/realtime/device_call/: CMakeLists.txt  qec_device_call_service.cpp
libs/qec/lib/realtime/host_dispatch/: CMakeLists.txt  host_dispatch_device.cpp  host_dispatch_service.cpp
libs/qec/lib/realtime/quantinuum/: CMakeLists.txt  quantinuum_device.cpp  quantinuum_realtime_decoding.cpp
libs/qec/lib/realtime/simulation/: CMakeLists.txt  simulation_device.cpp
libs/qec/lib/realtime/simulation-cqr/: CMakeLists.txt  simulation_cqr_device.cpp  simulation_cqr_host.cpp
libs/qec/tools/decoding-server/: CMakeLists.txt  decoding_server.cpp  decoding_server_config.yaml  qec_decoding_daemon.cpp
libs/qec/unittests/decoders/pymatching/: CMakeLists.txt  test_pymatching.cpp  test_pymatching_device_call_realtime.cpp  test_pymatching_qpu_device_call.cpp  test_pymatching_realtime.cpp
libs/qec/unittests/realtime/app_examples/: CMakeLists.txt  concurrency_test_decoder.cpp  gen_dsparse.py  gen_dsparse_from_memory_circuit.py  resolve_ising_artifacts.py  surface_code-1-cqr-two-process-test.sh  surface_code-1-test.py  surface_code-1-test.sh  surface_code-1.cpp  surface_code-2-test.sh  surface_code-2.cpp  surface_code-3-test.sh  surface_code-3.cpp  surface_code-4-yaml-ising-test.py  surface_code-4-yaml-test.sh  surface_code-4-yaml.cpp  surface_code_1.py
libs/qec/unittests/utils/: CMakeLists.txt  README.md  hololink_fpga_emulator.cpp  hololink_fpga_syndrome_playback.cpp  hololink_mock_decoder_bridge.cpp  hololink_mock_decoder_bridge.cu  hololink_mock_decoder_test.sh  hololink_qldpc_graph_decoder_bridge.cpp  hololink_qldpc_graph_decoder_test.sh  hololink_wrapper.cpp  hololink_wrapper.h  hsb_fpga_decoder_server_test.sh  hsb_fpga_decoding_server_test.sh
scripts/: benchmark_nmoptimizer_d5r5_nico_dem.py  build_docs.sh  build_one_lib.sh  build_wheels.sh  clean.sh  (+5 more)
(+515 files in other folders)
